--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/adventure?serverTimezone=UTC
+spring.datasource.username=SkideGodt
+spring.datasource.password=SkideGodt
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.datasource.initialization-mode=never
+
+spring.jpa.show-sql=true
